wedding copy 1st draft with form and css

--- a/css/queries.css
+++ b/css/queries.css
@@ -212,12 +212,13 @@
         width: 100%;
     }
 
-    .hero-strip {
-        margin-top: 0;
-    }
-
     .events .leftcol {
         padding: 0 15px;
+        margin-bottom: 15px;
+        border-right: none;
+    }
+
+    .events .midcol {
         margin-bottom: 15px;
         border-right: none;
     }
@@ -293,7 +294,7 @@
 
 @media screen and (max-width: 480px) {
     .hero .hero-content {
-        padding-top: 110%;
+        padding-top: 140%;
     }
     
     .hero .hero-content img {
@@ -324,25 +325,6 @@
         left: 41%;
         right: auto;
         transform: translateX(-50%);
-    }
-
-    .features .ipad-wrap {
-        width: 706px;
-        height: 1002px;
-        background: url("../img/ipad-device.png") no-repeat center center;
-        z-index: 1;
-        background-size: 40%;
-    }
-
-    .features .iphone-wrap {
-        width: 304px;
-        height: 617px;
-        background: url("../img/iphone6.png") no-repeat center center;
-        position: absolute;
-        left: 350px;
-        bottom: 129px;
-        z-index: 2;
-        background-size: 40%;
     }
 
     .features {
